# onnx-plaidml

./: .appveyor.yml  .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
.travis/: before_install.sh
onnx_plaidml/: __init__.py  backend.py  conversion.py  opset_onnx.py  opset_util.py
tests/: test_onnx_backend.py
