[metadata]
name = onnx-plaidml
version = attr: onnx_plaidml.__version__
description = PlaidML ONNX backend implementation.
long_description = ONNX-Plaidml implements an ONNX backend using PlaidML.
url = http://vertex.ai
author = Vertex.AI
author_email = eng@vertex.ai
license = https://www.gnu.org/licenses/agpl-3.0.en.html
keywords = development ml onnx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[options]
packages = onnx_plaidml
install_requires =
    click
    numpy
    onnx==1.2.1
    plaidml>=0.3.3
    six
setup_requires =
    pytest-runner
tests_require =
    pytest
    tabulate

[options.entry_points]
console_scripts =
    convert-onnx-to-tile = onnx_plaidml.conversion:onnx_to_tile

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[yapf]
based_on_style = google
column_limit = 99
indent_dictionary_value = yes
